Mejoras presentacion y fix del scrollbar-jumping quitando la scrollbar con CSS mientras mantenemos la opcion de hacer scroll

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,17 +4,30 @@
 
 html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+	padding: 0;
+	margin: 0;
+	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+		Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+	color: inherit;
+	text-decoration: none;
 }
 
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
+}
+
+::-webkit-scrollbar {
+	width: 0;
+  height: 0;
+	background: transparent;
+	display: none;
+}
+
+html {
+  overflow-y: scroll;
+	-ms-overflow-style: none;
+	scrollbar-width: none;
 }
